Fix ar so that it can correctly detect non-dash prefixed options that appear after dash prefixed options.

PR 13256
	* ar.c (decode_options): Restart option scanning if no operation
	is detected and argument remain to be scanned.